fix spacing at bottom of active-panel

--- a/client/assets/styles/scss/views/views-toolbar.scss
+++ b/client/assets/styles/scss/views/views-toolbar.scss
@@ -29,7 +29,7 @@
   }
 
   ~ .active-panel {
-    height: calc(100% - 83px); // tabs + toolbar
+    height: calc(100% - 81px); // tabs + toolbar
   }
 }
 
